@@ -1,5 +1,5 @@
 ;; local-fi-developer-hooks.el
-;; $Id: local-fi-developer-hooks.el,v 2.5 1996/11/21 21:44:05 layer Exp $
+;; $Id: local-fi-developer-hooks.el,v 2.6 1996/11/22 01:14:42 layer Exp $
 
 ;; This file is not for public distribution.
 ;; It contains extra hooks for fi developers only, things like special
@@ -76,3 +76,31 @@
 	    (error (message "error updating modify line...")
 		   (sit-for 1))))))
   nil)
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; setup C code editing
+
+(setq c-auto-newline nil)
+(setq c-tab-always-indent t)
+
+(add-hook 'c-mode-hook   'local-fi::c-mode-hook-func)
+(add-hook 'c++-mode-hook 'local-fi::c-mode-hook-func)
+
+(if (and (on-ms-windows)
+	 (not (eq system-type 'windows-nt)))
+    (load "cxx-mode")
+  (require 'cc-mode))
+
+(push '("\\.h$" . c++-mode) auto-mode-alist)
+(push '("\\.c$" . c++-mode) auto-mode-alist)
+(push '("\\.cc$" . c++-mode) auto-mode-alist)
+(push '("\\.cpp$" . c++-mode) auto-mode-alist)
+
+(defun local-fi::c-mode-hook-func ()
+  (auto-fill-mode 1)
+  (cond ((eq fi::emacs-type 'emacs19)
+	 (c-set-style "cc-mode"))
+	)
+;;;; This is way too slow:
+  ;;(when (fboundp 'font-lock-mode) (font-lock-mode 1))
+  )
